# sourc3

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  notarize.sh  version.h.in
.github/actions/download-beam-assets/: action.yml  main.js  package-lock.json
.github/workflows/: build.yml  deploy_ui.yml
docker/: Dockerfile  docker-compose.yml
eth-api-proxy/: .env.example  app.js  package-lock.json  package.json
eth-api-proxy/tools/: create_organization.js
eth-api-proxy/utils/: Sourc3.json  eth_utils.js
git-remote-beam/: CMakeLists.txt  beam-remote.cfg  git-remote-beam.cpp  git-remote-beam.h  remote_helper.cpp
nginx/: sourc3-front.conf
remote_helper/: CMakeLists.txt  beam_wallet_client.cpp  beam_wallet_client.h  contract_state.hpp  eth_wallet_client.cpp  eth_wallet_client.h  git_utils.cpp  git_utils.h  object_collector.cpp  object_collector.h  pit-remote.cfg  remote_helper.cpp  utils.cpp  utils.h  wallet_client.cpp  wallet_client.h
remote_helper/engines/: base_engine.cpp  base_engine.h  engine_factory.cpp  engine_factory.h
remote_helper/engines/ipfs/: ipfs_engine.cpp  ipfs_engine.h  parsing.cpp  parsing.h  types.cpp  types.h
remote_helper/engines/ipfs-bc/: ipfs_bc_engine.cpp  ipfs_bc_engine.h
remote_helper/git/: git_utils.cpp  git_utils.h  object_collector.cpp  object_collector.h
remote_helper/unittests/: CMakeLists.txt  helper_tests.cpp  serialization_tests.cpp
remote_helper/unittests/testrepo/: .gitmodules  CMakeLists.txt  CMakeSettings.json
remote_helper/unittests/testrepo/shaders/: CMakeLists.txt  app.cpp  contract.cpp  contract.h  contract_sid.i  exception_base.hpp
remote_helper/unittests/testrepo/unittests/: CMakeLists.txt  shader_test.cpp
remote_helper/unittests/testrepo/unittests/test/: test.cpp
remote_helper/unittests/testrepo/unittests/testfolder/: test_fail.cpp
remote_helper/wallets/: base_client.cpp  base_client.h  beam_wallet_client.cpp  beam_wallet_client.h  client_factory.cpp  client_factory.h
shaders/: CMakeLists.txt  app-admin.cpp  app-admin.wasm  app.cpp  app.wasm  contract.cpp  contract.h  contract.wasm  contract_sid.i  contract_sid_v0.i  upgadable3_update_instruction.md
shaders/libgit2/: full_git.h  full_zlib.h  integer.h
shaders/upgradable3/: app_common_impl.h  contract.h  contract_impl.h
try-to-add-libgit2/: example.cpp  full_git.h
try-to-add-libgit2/shaders/: CMakeLists.txt  app.cpp  contract.cpp  contract.h  contract_sid.i
try-to-add-libgit2/shaders/git2/: CMakeLists.txt
try-to-add-libgit2/shaders/git2/include/git2/: common.h
try-to-add-libgit2/shaders/git2/include/git2/sys/: features.h
try-to-add-libgit2/shaders/git2/src/: common.h  runtime.c  sysdir.c
try-to-add-libgit2/shaders/git2/src/allocators/: failalloc.h
ui/: .babelrc  .env  .eslintrc.json  .gitignore  ant-theme-vars.less  binding.gyp.example  entitlements.mac.plist  environment.plist  jest.config.ts  libgit.ts  main.js  package-lock.json  package.json  preload.js  tsconfig.json  webpack.config.js  webpack.config.ts
ui/electron/: main.js  package.json
ui/electron/bundle/server/: bundle.js  bundle.js.LICENSE.txt
ui/electron/front/: 249.bundle.js  249.bundle.js.LICENSE.txt  index.html  main.bundle.js  main.bundle.js.LICENSE.txt  vendors.bundle.js  wasm-client.js  wasm-client.worker.js  wasm-client.worker.js.LICENSE.txt
ui/electron/front/styles/: main.css
ui/front/: .babelrc  .eslintignore  .eslintrc.json  .prettierrc.json  ant-theme-vars.less  index.js  jest.config.ts  package-lock.json  package.json  preload.js  serve.json  tsconfig.json  webpack.config.js  webpack.config.ts
ui/front/public/: 404.html  index.html  netlify.toml
ui/front/src/: app.tsx  index.css  index.tsx
ui/front/src/assets/: app.wasm
ui/front/src/public/: index.html
ui/front/src/styles/: fonts.scss  main.scss  vars.scss
ui/front/src/types/: beam.ts  contract.ts  declarations.d.ts  dom.d.ts  helper-types.ts  index.ts  profile.ts  qwebchannel-types.ts  request-schemas-types.ts
ui/service/: .env.example  .eslintignore  .eslintrc.json  .gitignore  nodemon.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
ui/service/nodegit/: libgit.ts
ui/service/nodegit/git/: git.repository.ts  git.service.ts
ui/service/src/: app.ts  server.ts
ui/service/src/common/: config.ts
ui/service/src/entities/: seed.entity.ts
ui/service/src/middlewares/: index.ts
ui/service/src/utils/: file-handlers.ts  index.ts  libgit.ts  paths.ts  process-handlers.ts  string-handlers.ts
ui/service/tests/e2e/: wallet.test.js
ui/src/: app.ts  index.css  index.html  index.tsx  main.ts  preload.ts  server.ts
ui/src/assets/: app.wasm
ui/src/common/: config.ts  index.ts  ormconfig.ts
ui/src/components/antd/: index.ts
ui/src/components/container/: index.ts
ui/src/components/page/: index.ts  main.container.tsx
ui/src/components/shared/: index.ts  info.tsx  list-item.tsx  notification-element.tsx  search.tsx  tree.tsx
ui/src/entities/: index.ts  repo.entity.ts  seed.entity.ts
ui/src/ether/: eth-api.ts  index.ts  websocket.ts
ui/src/libs/action-creators/: action-creators.ts  error-handlers.ts  repo-response-handlers.ts  request-creators.ts  thunks.ts
ui/src/libs/beam/: beam-api.ts
ui/src/libs/constants/: api.ts  app.ts  contract.ts
ui/src/libs/redux/: constants.ts  index.ts
ui/src/libs/utils/: colors-handler.ts  index.ts  loading-handler.ts  string-handlers.ts  tree-handlers.ts  utils.test.ts
ui/src/middlewares/error/: error-handler.ts
ui/src/middlewares/logger/: logger.ts
ui/src/public/: index.html
ui/src/resources/beam-api/: beam.controller.ts  beam.repository.ts  beam.service.ts  index.ts
ui/src/resources/git/: git.controller.ts  git.repository.ts  git.service.ts  index.ts
ui/src/types/: antd.ts  beam.ts  contract.ts  declarations.d.ts  index.ts  types.ts
ui/src/utils/: file-handlers.ts  index.ts  libgit.ts  paths.ts  process-handlers.ts  typeorm-handler.ts
upgradable2/: app_common_impl.h
upgradable3/: contract.h  contract_impl.h
(+770 files in other folders)
