cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++17 -flto -fno-rtti -Wno-inline-new-delete -fno-exceptions -nostartfiles") #-nostdlib ")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--no-entry,--allow-undefined,--export=Ctor,--export=Dtor,--export=Method_0,--export=Method_1") #,--strip-all")

add_executable(contract contract.cpp)
file(GLOB GIT2 git2/**/*.c)
include_directories(git2/include)
include_directories(git2/src)
include_directories(git2/deps/pcre)
include_directories(git2/deps/http-parser)
include_directories(/usr/local/include)
add_executable(app app.cpp ${GIT2})
target_link_libraries(contract PRIVATE Beam::shader-lib)
target_link_libraries(app PRIVATE Beam::shader-lib)
generate_sid(contract)
